first edits of the components

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,10 @@
-<p>footer works!</p>
+<footer class="footer">
+  <div class="footer-container">
+    <div class="footer-icons">
+      <a href="#"><img src="assets/icons/github.svg" alt="GitHub"></a>
+      <a href="#"><img src="assets/icons/linkedin.svg" alt="LinkedIn"></a>
+      <a href="#"><img src="assets/icons/email.svg" alt="Email"></a>
+    </div>
+    <p>&copy; 2025 Sofia Mustermann</p>
+  </div>
+</footer>
