--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,10 @@
-<p>header works!</p>
+<header class="header">
+  <div class="header-container">
+    <div class="header-left">
+      <span class="header-name">Hello! I am Sofia</span>
+    </div>
+    <div class="header-right">
+      <img src="assets/img/sofia.png" alt="Sofia" class="header-image">
+    </div>
+  </div>
+</header>
