--- a/src/app/hero-section/hero-section.component.html
+++ b/src/app/hero-section/hero-section.component.html
@@ -1,1 +1,7 @@
-<p>hero-section works!</p>
+<section class="hero-section">
+  <div class="hero-content">
+    <h1>Let's work together</h1>
+    <p>I am a passionate developer from Germany.</p>
+    <button>Contact me</button>
+  </div>
+</section>
