--- a/src/app/my-work/my-work.component.html
+++ b/src/app/my-work/my-work.component.html
@@ -1,1 +1,6 @@
-<p>my-work works!</p>
+<section class="my-work-section">
+  <h2>My work</h2>
+  <div class="projects-container">
+    <app-project-card *ngFor="let project of projects" [project]="project"></app-project-card>
+  </div>
+</section>
