--- a/src/app/skillset/skillset.component.html
+++ b/src/app/skillset/skillset.component.html
@@ -1,1 +1,9 @@
-<p>skillset works!</p>
+<section class="skillset-section">
+  <h2>Skill set</h2>
+  <div class="skills-container">
+    <div *ngFor="let skill of skills" class="skill">
+      <img [src]="'assets/icons/' + skill.icon" [alt]="skill.name">
+      <span>{{ skill.name }}</span>
+    </div>
+  </div>
+</section>
