first styling of hearo component

--- a/src/app/hero-section/hero-section.component.html
+++ b/src/app/hero-section/hero-section.component.html
@@ -1,7 +1,17 @@
 <section class="hero-section">
-  <div class="hero-content">
-    <h1>Let's work together</h1>
-    <p>I am a passionate developer from Germany.</p>
-    <button>Contact me</button>
+  <div class="hero-bg"></div>
+  <div class="ellipse"></div>
+  <div class="line"></div>
+  <div class="scroll">SCROLL</div>
+  <div class="job-title">
+    <div class="frontend">FRONTEND</div>
+    <div class="developer">DEVELOPER</div>
+  </div>
+  <div class="hello">Hello! I am Sofia</div>
+  <div class="photo"></div>
+  <div class="social-media">
+    <div class="github-button"></div>
+    <div class="email-button"></div>
+    <div class="linkedin-button"></div>
   </div>
 </section>
