--- a/src/app/hero-section/hero-section.component.scss
+++ b/src/app/hero-section/hero-section.component.scss
@@ -1,25 +1,153 @@
 .hero-section {
-  background-color: #f9f9f9;
-  padding: 60px 20px;
-  text-align: center;
+  position: absolute;
+  width: 1440px;
+  height: 1029px;
+  left: 0px;
+  top: -5px;
+  background: linear-gradient(179.99deg, #ffffff 12.89%, #eaf0ff 91.39%);
 }
 
-.hero-content h1 {
-  font-size: 48px;
-  margin-bottom: 20px;
+.hero-bg {
+  position: absolute;
+  width: 1440px;
+  height: 1028px;
+  left: 0px;
+  top: -5px;
 }
 
-.hero-content p {
-  font-size: 18px;
-  margin-bottom: 30px;
+.ellipse {
+  position: absolute;
+  width: 892px;
+  height: 892px;
+  left: -199px;
+  top: -71px;
+  background: radial-gradient(
+    74.22% 74.22% at 19.79% 22.42%,
+    #5988ff 6.25%,
+    #5988ff 51.56%,
+    #0043f0 100%
+  );
 }
 
-.hero-content button {
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  padding: 15px 30px;
-  font-size: 16px;
-  cursor: pointer;
-  border-radius: 5px;
+.line {
+  position: absolute;
+  width: 0px;
+  height: 330px;
+  left: 1034px;
+  top: 694px;
+  border: 2px solid #5988ff;
+}
+
+.scroll {
+  position: absolute;
+  width: 95px;
+  height: 28px;
+  left: 987px;
+  top: 656px;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 23px;
+  line-height: 120%;
+  color: #5988ff;
+}
+
+.job-title {
+  position: absolute;
+  width: 645px;
+  height: 221px;
+  left: 731px;
+  top: 305px;
+}
+
+.developer {
+  position: absolute;
+  width: 609px;
+  height: 110px;
+  left: 731px;
+  top: 416px;
+  font-family: "Baloo";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 118px;
+  line-height: 120%;
+  display: flex;
+  align-items: center;
+  letter-spacing: -0.02em;
+  color: #5988ff;
+}
+
+.frontend {
+  position: absolute;
+  width: 645px;
+  height: 114px;
+  left: 731px;
+  top: 305px;
+  font-family: "Baloo";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 128px;
+  line-height: 120%;
+  display: flex;
+  align-items: center;
+  letter-spacing: -0.025em;
+  color: #5988ff;
+}
+
+.hello {
+  position: absolute;
+  width: 645px;
+  height: 61px;
+  left: 731px;
+  top: 227px;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 64px;
+  line-height: 100%;
+  display: flex;
+  align-items: center;
+  color: #5988ff;
+}
+
+.photo {
+  position: absolute;
+  width: 761px;
+  height: 917px;
+  left: 32px;
+  top: 106px;
+  background: url("/assets/img/photo.jpg");
+}
+
+.social-media {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0px;
+  gap: 25px;
+  position: absolute;
+  width: 40px;
+  height: 170px;
+  left: 1300px;
+  top: 789px;
+}
+
+.github-button,
+.email-button,
+.linkedin-button {
+  display: flex;
+  width: 40px;
+  height: 40px;
+}
+
+.github-button {
+  justify-content: center;
+  align-items: flex-end;
+}
+
+.email-button,
+.linkedin-button {
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
 }
