--- a/src/app/hero-section/hero-section.component.scss
+++ b/src/app/hero-section/hero-section.component.scss
@@ -1,12 +1,3 @@
-.hero-section {
-  position: absolute;
-  width: 1440px;
-  height: 1029px;
-  left: 0px;
-  top: -5px;
-  background: linear-gradient(179.99deg, #ffffff 12.89%, #eaf0ff 91.39%);
-}
-
 .hero-bg {
   position: absolute;
   width: 1440px;
@@ -19,7 +10,7 @@
   position: absolute;
   width: 892px;
   height: 892px;
-  left: -199px;
+  left: -208px;
   top: -71px;
   background: radial-gradient(
     74.22% 74.22% at 19.79% 22.42%,
@@ -27,6 +18,7 @@
     #5988ff 51.56%,
     #0043f0 100%
   );
+  border-radius: 50%;
 }
 
 .line {
@@ -116,7 +108,8 @@
   height: 917px;
   left: 32px;
   top: 106px;
-  background: url("/assets/img/photo.jpg");
+  // background: url("/assets/img/photo.jpg");
+  background: url("/assets/img/photo.svg");
 }
 
 .social-media {
