adding header items

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,10 +1,19 @@
-<header class="header">
-  <div class="header-container">
-    <div class="header-left">
-      <span class="header-name">Hello! I am Sofia</span>
+<header class="header-menu">
+  <div class="logo">
+    <!-- Logo content here -->
+  </div>
+  <div class="frame-365">
+    <div class="menu-s2">
+      <div class="button-menu">About me</div>
+      <div class="button-menu">Skills</div>
+      <div class="button-menu">My work</div>
     </div>
-    <div class="header-right">
-      <img src="assets/img/sofia.png" alt="Sofia" class="header-image">
+    <div class="frame-615">
+      <div class="frame-614">
+        <div class="language-button">EN</div>
+        <div class="separator">/</div>
+        <div class="language-button active">DE</div>
+      </div>
     </div>
   </div>
 </header>
