--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <header class="header-menu">
   <div class="logo">
-    <!-- Logo content here -->
+    <img src="assets/img/logo.png" alt="logo" />
   </div>
   <div class="frame-365">
     <div class="menu-s2">
