gap editing header

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,17 +3,19 @@
     <img src="assets/img/logo.png" alt="Logo" />
   </div>
 
-  <nav class="main-nav">
-    <ul>
-      <li><a href="#">About me</a></li>
-      <li><a href="#">Skills</a></li>
-      <li><a href="#">My work</a></li>
-    </ul>
-  </nav>
+  <div class="nav-group">
+    <nav class="main-nav">
+      <ul>
+        <li><a href="#">About me</a></li>
+        <li><a href="#">Skills</a></li>
+        <li><a href="#">My work</a></li>
+      </ul>
+    </nav>
 
-  <div class="language-switcher">
-    <span>EN</span>
-    <span>/</span>
-    <span class="active">DE</span>
+    <div class="language-switcher">
+      <span>DE</span>
+      <span>/</span>
+      <span class="active">EN</span>
+    </div>
   </div>
 </header>
