adding contact icons

--- a/src/app/hero-section/hero-section.component.html
+++ b/src/app/hero-section/hero-section.component.html
@@ -16,10 +16,9 @@
         <div class="scroll-line"></div>
       </div>
       <div class="social-icons">
-        <!-- Placeholders for social icons -->
-        <a href="#">[GH]</a>
-        <a href="#">[Mail]</a>
-        <a href="#">[In]</a>
+        <img src="assets/img/github.png" alt="GitHub" />
+        <img src="assets/img/mail.png" alt="Mail" />
+        <img src="assets/img/linked-in.png" alt="LinkedIn" />
       </div>
     </div>
   </div>
