--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
 <app-header></app-header>
 <app-hero-section></app-hero-section>
+<app-my-work></app-my-work>
+<app-skillset></app-skillset>
+<app-contact></app-contact>
+<app-footer></app-footer>
