--- a/src/app/hero-section/hero-section.component.scss
+++ b/src/app/hero-section/hero-section.component.scss
@@ -30,8 +30,8 @@
 
 .hero-content {
   position: relative;
-  z-index: 10; // Above the blue ellipse
-  padding: 117px 24px 24px; // 117px for header offset
+  z-index: 10;
+  padding: 117px 0 0 0;
   display: flex;
   flex-direction: column;
   align-items: center;
