--- a/src/app/skillset/skillset.component.scss
+++ b/src/app/skillset/skillset.component.scss
@@ -20,23 +20,27 @@ h2 {
   font-family: "Baloo 2", cursive;
   color: #ffffff;
   font-size: clamp(48px, 8vw, 96px);
-  border-bottom: none; /* Remove underline */
-  padding-bottom: 0; /* Add some space between text and potential border */
-  margin-bottom: 40px; /* Add space below the title */
-  text-align: center; /* Center the title */
-  width: 100%; /* Make h2 full width */
+  border-bottom: none;
+  padding-bottom: 0;
+  margin-bottom: 40px;
+  text-align: center;
+  width: 100%;
 }
 
 .skill-set-icons {
   display: flex;
   flex-direction: column;
   gap: 40px;
+  width: 100%;
+  align-items: center;
 }
 
 .skill-row {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 20px;
+  width: 100%;
+  max-width: 300px;
 }
 
 .skill-item {
@@ -75,6 +79,7 @@ h2 {
   .skill-row {
     grid-template-columns: repeat(6, 1fr);
     gap: 50px;
+    max-width: 100%;
   }
 
   .skill-icon {
