--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap");
 
+html, body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+
 body {
   font-family: "Montserrat", sans-serif;
-  margin: 0;
 }
