--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 <app-hero-section></app-hero-section>
-<app-my-work></app-my-work>
 <app-contact></app-contact>
 <app-skillset></app-skillset>
+<app-projects></app-projects>
 <app-footer></app-footer>
