adding references component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,5 @@
 <app-contact></app-contact>
 <app-skillset></app-skillset>
 <app-projects></app-projects>
+<app-references ngSkipHydration></app-references>
 <app-footer></app-footer>
