--- a/src/app/hero-section/hero-section.component.html
+++ b/src/app/hero-section/hero-section.component.html
@@ -1,24 +1,29 @@
-<div class="hero-content">
-  <div class="hero-left">
-    <div class="hero-photo">
-      <img src="assets/img/photo.svg" alt="Sofia" />
-    </div>
-  </div>
-  <div class="hero-right">
-    <div class="hero-text">
-      <p class="greeting">Hello! I am Sofia</p>
-      <h1 class="title-frontend">FRONTEND</h1>
-      <h2 class="title-developer">DEVELOPER</h2>
-    </div>
-    <div class="social-scroll-group">
-      <div class="scroll-indicator">
-        <span>SCROLL</span>
-        <div class="scroll-line"></div>
+<div class="hero-section">
+  <div class="ellipse ellipse1"></div>
+  <div class="ellipse ellipse2"></div>
+  <div class="ellipse ellipse3"></div>
+  <div class="hero-content">
+    <div class="hero-left">
+      <div class="hero-photo">
+        <img src="assets/img/photo.svg" alt="Sofia" />
       </div>
-      <div class="social-icons">
-        <img src="assets/img/github.png" alt="GitHub" />
-        <img src="assets/img/mail.png" alt="Mail" />
-        <img src="assets/img/linked-in.png" alt="LinkedIn" />
+    </div>
+    <div class="hero-right">
+      <div class="hero-text">
+        <p class="greeting">Hello! I am Sofia</p>
+        <h1 class="title-frontend">FRONTEND</h1>
+        <h2 class="title-developer">DEVELOPER</h2>
+      </div>
+      <div class="social-scroll-group">
+        <div class="scroll-indicator">
+          <span>SCROLL</span>
+          <div class="scroll-line"></div>
+        </div>
+        <div class="social-icons">
+          <img src="assets/img/github.png" alt="GitHub" />
+          <img src="assets/img/mail.png" alt="Mail" />
+          <img src="assets/img/linked-in.png" alt="LinkedIn" />
+        </div>
       </div>
     </div>
   </div>
